--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ div.col {
     cursor: pointer;
 }
 
-#c1{
+#c1 {
     border-bottom: 3px solid #696662;
     border-right: 3px solid #696662;
 }
@@ -88,7 +88,7 @@ div.col {
 }
 
 #c1:hover, #c2:hover, #c3:hover, #c4:hover, #c5:hover, #c6:hover, #c7:hover, #c8:hover, #c9:hover {
-    background-color: tomato;
+    background-color: orange;
 }
 
 .nuevoJuegoContainer {
@@ -115,37 +115,77 @@ div.col {
     margin-top: 10px;
 }
 
-.selectX{
+.selectX {
     color: #edd97d;
 }
 
-.selectO{
+.selectO {
     color: #3FACD6;
-
 }
 
 .selectX:hover, .selectO:hover {
-    background-color: #595550;
+    background-color: orange;
     cursor: pointer;
 }
 
 ::-webkit-input-placeholder {
     text-align: center;
- }
- 
- :-moz-placeholder { /* Firefox 18- */
-    text-align: center;  
- }
- 
- ::-moz-placeholder {  /* Firefox 19+ */
-    text-align: center;  
- }
- 
- :-ms-input-placeholder {  
-    text-align: center; 
- }
+}
 
- input{
-     text-align: center;
-     width: 80%;
- }
+:-moz-placeholder {
+    /* Firefox 18- */
+    text-align: center;
+}
+
+::-moz-placeholder {
+    /* Firefox 19+ */
+    text-align: center;
+}
+
+:-ms-input-placeholder {
+    text-align: center;
+}
+
+input {
+    text-align: center;
+    width: 80%;
+    border-radius: 5px;
+    border: none;
+}
+
+#ganador {
+    color: orange;
+    font-weight: 900;
+    font-size: 4vw;
+    margin-right: 20px;
+}
+
+#playAgain {
+    border: none;
+    border-radius: 15px;
+    font-weight: 900;
+    background-color: orange;
+    height: 60px;
+}
+
+#playAgain:hover {
+    background-color: orangered;
+    color: white;
+}
+
+#endgame {
+    display: flex;
+    align-items: center;
+}
+
+#turno {
+    color: white;
+    font-weight: 900;
+    font-size: 2vw;
+}
+
+#turno span {
+    color: orange;
+    font-weight: 900;
+    font-size: 3vw;
+}
